--- a/StatisticalInference/CourseProjectP1.Rmd
+++ b/StatisticalInference/CourseProjectP1.Rmd
@@ -9,14 +9,14 @@ output: pdf_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
-### Overview
+## Overview
 
 This Course Project has been designed to demonstrate a student's understanding of how the Central Limit Theorem help to describe the behavior of the distribution of samples of size n.  In this report I will demonstrate that the collection of sample means will approach a normal distribution with mean equal to the population mean and variance equal to the population variance divided by the sample size.  
 
 To demonstrate the above, I have used the exponential distribution as required for the assignment.  Since it was not covered in this course I will fist give a quick over view of the exponential distribution and then move into simulating 1,000 samples of size 40.  With the help of graphs I will show that the distribution of means centers around the theoretical mean of an exponential distribution.  
 
 
-### The Exponential Distibution
+## The Exponential Distibution
 
 The exponential distribution is a continuous distribution used to determine the
 probability that $x$ units of time passes between events.  Like the wait time between customers in a bank or a grocery story. The parameter for the 
@@ -38,7 +38,7 @@ The theoretical mean and variance are as follows:$\mu=\frac{1}{\lambda}$ and $\s
 For this project $\lambda = 0.2$ which means that theoretical mean is $\mu = 5$, 
 and variance is $\sigma^2 = 25$.  Below is a histogram of a sample of 1,000 random variables selected from an exponential distribution, and sketched on top is the curve for the exponential probability distribution.   
 
-```{r, graphOfExpDist, echo=FALSE, fig.height=2.35, warning=FALSE}
+```{r, graphOfExpDist, echo=FALSE, fig.height=2.3, warning=FALSE}
 library(ggplot2)
 
 set.seed(1234)
@@ -75,7 +75,7 @@ g
 
 ```
 
-### Sampling Distribution Mean
+## Sampling Distribution Mean
 
 In R rexp(40,0.2) can be used to build a sample of $n=40$ exponential random variables with $\lambda = 0.2$. To simulate a sampling distribution, this is done 1000 times and the means are recorded and a density histogram is used to display the distribution below.  From the central limit theorem, we know that this distribution will be normal *not* exponential like the distribution the means were calculated from. This normal distribution of sample means will theoretically have a mean of 5 and a standard error of  $25/\sqrt{40} \approx 0.79$. In this case we are using a known population statistic to describe a sampling distribution.  Using a $95\%$ confidence interval, the sampling distribution's mean should fall within about 1.65 standard errors of 5. This means that the sampling distributions mean should be within the interval $[2.98, 7.05]$.  
 
@@ -83,7 +83,7 @@ In R rexp(40,0.2) can be used to build a sample of $n=40$ exponential random var
 The graph below shows that this is in fact what has happened in our simulation of 1,000 samples of size 40. The code for this simulation and the graphs can be found in the appendix. 
 
 
-```{r,graphOfSampleMeans, echo=FALSE,fig.height=3,fig.width=7, warning=FALSE}
+```{r,graphOfSampleMeans, echo=FALSE,fig.height=4,fig.width=7, warning=FALSE}
 
 set.seed(123)
 smu<-NULL
@@ -128,10 +128,10 @@ legend("topright",
   pch = "-", 
   bty = "n", 
   pt.cex = 2, 
-  cex = .7, 
+  cex = .8, 
   text.col = "black", 
   horiz = F , 
-  inset = c(-0.01, 0)
+  inset = c(-0.01, -.04)
   )
 ```
 
@@ -142,9 +142,9 @@ Another thing that is important to note is that the distribution of 1000 sample 
 
 \newpage
 
-## Appendix
+# Appendix
 
-### Code:
+## Code:
 
 To create the the exponential distribution curve on top of the 1000 random variables generated from an exponential distribution:
 
