--- a/PracticalMachineLearning/Project.Rmd
+++ b/PracticalMachineLearning/Project.Rmd
@@ -6,7 +6,7 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE,message = FALSE)
+knitr::opts_chunk$set(message = FALSE)
 ```
 
 ## Background
